--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="st-hero-text">
         <div class="st-author"><img src="assets/img/section/bannerr.jpeg" alt=""></div>
         <h1>Hi, I am <span>Tonderayi Kacey</span></h1>
-        <p>I am a web developer, UI/UX designer and IT professional. I can provide clean code and pixel perfect design. <br>I also make website more & more interactive with web animations.</p>
+        <p>I am a Web Designer & Developer, UI/UX designer, Software Developer, IT professional, Cybersecurity Enthusiast and AI Enthusiast. I can provide clean code and pixel perfect design. <br>I also make website more & more interactive with web animations.</p>
         <div class="st-hero-social-links">
           <a href="https://www.facebook.com/emoless.kx" class="st-social-btn">
             <i class="fab fa-facebook-f"></i>
@@ -109,11 +109,11 @@
             <div class="st-vertical-middle-in">
               <div class="st-text-block st-style1">
                 <h2 class="st-text-block-title">Hello There! I'm Tonderayi K Tafirenyika</h2>
-                <h4 class="st-text-block-subtitle">Web Designer & Developer, UI/UX designer and IT professional</h4>
+                <h4 class="st-text-block-subtitle">Web Designer & Developer, UI/UX designer, Software Developer, IT professional, Cybersecurity Enthusiast and AI Enthusiast.</h4>
                 <div class="st-text-block-text">
                   <p>A highly motivated and accomplished B. Tech Honours graduate in Information Technology, possessing a strong 
                     foundation in Web development, System analysis, and Software development. Demonstrates exceptional problemsolving skills, a keen understanding of cutting-edge technologies, and a proven ability to deliver high-quality solutions. 
-                    Experienced in Technical assistance, Technology risk analysis, I.T audit, Web development and Graphic designing. Strong 
+                    Experienced in Technical assistance, Technology risk analysis, I.T audit, Web development, Software Development and Graphic designing. Strong 
                     communication and teamwork skills, committed to staying updated on technological advancements. Eager to leverage 
                     academic knowledge and hands-on experience in a dynamic IT environment to contribute to innovative projects and 
                     drive organizational success.</p>
