Update CV link to use 'mycv.pdf'

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   <li><span>Freelance</span> : <span>Available</span></li>
                 </ul>
                 <div class="st-text-block-btn">
-                  <a href="resume/my-cv.pdf" class="st-btn st-style1 st-color1">Download CV</a>
+                  <a href="resume/mycv.pdf" class="st-btn st-style1 st-color1">Download CV</a>
                 </div>
               </div>
             </div>
